Fix selection color contrast

--- a/generators/app/templates/assets/scss/helpers/base.scss
+++ b/generators/app/templates/assets/scss/helpers/base.scss
@@ -11,6 +11,7 @@
 ::selection {
 	background-color: #b3d4fc;
 	text-shadow: none;
+	color: #222;
 }
 
 /* Anything that has been anchored to should have extra scroll margin */
